[payment-service]:Rabbit configuration and producer implemented